[gd_scene load_steps=2 format=3 uid="uid://c1tp6st8vq8iu"]

[ext_resource type="Script" uid="uid://0xdd0jlcvjg6" path="res://scripts/options_menu.gd" id="1_liyum"]

[node name="OptionsMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_liyum")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Goals"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Term"

[node name="TermGoal" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2190.0
alignment = 2
suffix = "h"
custom_arrow_step = 10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "Monthly"

[node name="MontlyGoal" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 744.0
alignment = 2
suffix = "h"
custom_arrow_step = 5.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Weekly"

[node name="WeeklyGoal" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
max_value = 168.0
alignment = 2
suffix = "h"
custom_arrow_step = 1.0

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Daily"

[node name="DailyGoal" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
max_value = 24.0
alignment = 2
suffix = "h"
custom_arrow_step = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="IntervalChecking" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IntervalCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/IntervalChecking"]
unique_name_in_owner = true
layout_mode = 2
expand_icon = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/IntervalChecking"]
layout_mode = 2
text = "Interval Checkup"

[node name="IntervalDuration" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/IntervalChecking"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 120.0
value = 1.0
alignment = 2
suffix = "mins"
custom_arrow_step = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Pomodoro" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PomodoroCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/Pomodoro"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/Pomodoro"]
layout_mode = 2
text = "Pomodoro"

[node name="PomodoroOptions" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Focus"

[node name="FocusDuration" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
suffix = "mins"
custom_arrow_step = 5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Break"

[node name="BreakDuration" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
suffix = "mins"
custom_arrow_step = 1.0

[node name="LongSessionInterval" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/LongSessionInterval"]
layout_mode = 2
text = "Long Session Interval"

[node name="SessionInterval" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/LongSessionInterval"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 120.0
value = 60.0
alignment = 2
suffix = "mins"
custom_arrow_step = 1.0

[node name="Save" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer/TermGoal" to="." method="_on_term_goal_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer2/MontlyGoal" to="." method="_on_montly_goal_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3/WeeklyGoal" to="." method="_on_weekly_goal_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer4/DailyGoal" to="." method="_on_daily_goal_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/IntervalChecking/IntervalCheck" to="." method="_on_interval_check_toggled"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/IntervalChecking/IntervalDuration" to="." method="_on_interval_duration_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/Pomodoro/PomodoroCheck" to="." method="_on_pomodoro_check_toggled"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer/FocusDuration" to="." method="_on_focus_duration_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/PomodoroOptions/VBoxContainer/HBoxContainer2/BreakDuration" to="." method="_on_break_duration_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/LongSessionInterval/SessionInterval" to="." method="_on_session_interval_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
